--- a/study/package.json
+++ b/study/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
-    "quasar": "^2.0.0"
+    "quasar": "^2.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@quasar/app": "^3.0.0",
