--- a/study/package.json
+++ b/study/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
+    "pdfmake": "^0.2.0",
     "quasar": "^2.0.0",
     "uuid": "^8.3.2"
   },
